# Hina

./: CMakeLists.txt  Hina.cpp  README.md
src/core/body/: Body.h  Wheel.h
src/core/environment/soil/: SoilPatch.cpp  SoilPatch.h
src/core/environment/terrain/: TerrainPatch.h
src/core/math/: CMakeLists.txt  Function.h  GSLMath.h  Integral.h  IntegralParams.h
src/core/solver/: WheelForceSolver.cpp  WheelForceSolver.h
src/core/solver/BasicForceSolver/: BasicForceSolver.cpp  BasicForceSolver.h
src/core/solver/BekkerForceSolver/: BekkerForceSolver.cpp  BekkerForceSolver.h
src/core/solver/SidewallForceSolver/: SidewallForceSolver.cpp  SidewallForceSolver.h
